Converted to the Poole layout

--- a/_posts/2015-06-27-a-new-blog.md
+++ b/_posts/2015-06-27-a-new-blog.md
@@ -4,8 +4,7 @@ title: "A new blog!"
 date: 2015-06-27
 ---
 
-Well. Finally got around to putting this website together. What\'s neat, it is
-written using Emacs in [Kramdown](http://kramdown.gettalong.org/syntax.html)
-and published with [Jekyll](http://jekyllrb.com). `jekyll build` generates the
-site, `jekyll serve` starts a test web server and watches for changes. All it
-takes to publish is to push the git repo. That\'s awesome.
+Well. Finally got around to putting this website together. What's neat, it is
+written using Emacs in Markdown and built with
+[Jekyll](http://jekyllrb.com). All it takes to publish it is to push the git
+repo. Isn't that awesome?
