--- a/_posts/2015-06-27-a-new-blog.md
+++ b/_posts/2015-06-27-a-new-blog.md
@@ -5,6 +5,6 @@ date: 2015-06-27
 ---
 
 Well. Finally got around to putting this website together. What's neat, it is
-written using Emacs in Markdown and built with
+written in Markdown using Emacs and built with
 [Jekyll](http://jekyllrb.com). All it takes to publish it is to push the git
 repo. Isn't that awesome?
