--- a/_posts/2015-06-27-a-new-blog.md
+++ b/_posts/2015-06-27-a-new-blog.md
@@ -7,7 +7,7 @@ date: 2015-06-27
 Well. Finally got around to putting this website together. What's neat, it is
 written in Markdown using Emacs and built with
 [Jekyll](http://jekyllrb.com). All it takes to publish it is to push the git
-repo. That's sweet.
+repo.
 
 This will be a blog about Emacs. It will contain concise posts about how to
 improve your productivity and how to program Emacs to make it your perfect
