--- a/_posts/2015-07-03-lisp-part-1.md
+++ b/_posts/2015-07-03-lisp-part-1.md
@@ -19,7 +19,7 @@ a major source of inspiration for them (hello
 [Java](http://people.csail.mit.edu/gregs/ll1-discuss-archive-html/msg04045.html),
 [Ruby](http://www.slideshare.net/yukihiro_matz/how-emacs-changed-my-life) and
 JavaScript). Some colleague of mine once said, and I am paraphrasing, that
-every programming language every invented either tries to be a better Fortran
+every programming language ever invented either tries to be a better Fortran
 or a degraded version of Lisp, e.g. some kind of Lisp for the masses. But don't
 think that Lisp is history; modern Lisps like Clojure are state-of-the-art
 programming languages. Lisp is the red pill.
@@ -195,4 +195,4 @@ That's it for today. Lots more to come. Stay tuned!
 
 [^fn-debugger]: If you make a mistake and end up in the debugger, just press q to exit.
 
-[^fn-cons]: CAR and CDR were the name of 2 registers in the CPU of the IBM 701!
+[^fn-cons]: CAR and CDR were the names of two registers in the CPU of the IBM 701!
