--- a/_posts/2015-07-03-lisp-part-1.md
+++ b/_posts/2015-07-03-lisp-part-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Lisp part 1"
+title: "Lisp is the red pill"
 date: 2015-07-04 15:51:00
 ---
 
@@ -10,31 +10,34 @@ Lisp was the second programming language ever invented, right after Fortran in
 the late fifties. John McCarthy, one of the founders of the discipline of
 Artificial Intelligence, created it.
 
-Lisp had its days during the first boom of AI; it even had its own
-[hardware](https://en.wikipedia.org/wiki/Lisp_machine). Lisp has invented many,
-if not most, of the programming paradigms used in modern languages, including
-homoiconicity, first class functions, garbage collection, aspect-oriented
-programming etc[^fn-smalltalk]. Many languages creators have said that Lisp was
-a major source of inspiration for them (hello
+Lisp was very popular during the boom of AI; it even had its own
+[hardware](https://en.wikipedia.org/wiki/Lisp_machine) witch I had the
+privilege to work with. Lisp has invented many, if not most, of the concepts
+and programming paradigms used in modern languages, including homoiconicity,
+first class functions, garbage collection, aspect-oriented programming, you
+name it[^fn-smalltalk]. Several languages creators have said that Lisp was a
+major source of inspiration for them (hello
 [Java](http://people.csail.mit.edu/gregs/ll1-discuss-archive-html/msg04045.html),
 [Ruby](http://www.slideshare.net/yukihiro_matz/how-emacs-changed-my-life) and
 JavaScript). Some colleague of mine once said, and I am paraphrasing, that
-every programming language ever invented either tries to be a better Fortran
-or a degraded version of Lisp, e.g. some kind of Lisp for the masses. But don't
+every programming language ever invented either tries to be a better Fortran or
+a degraded version of Lisp, e.g. some kind of Lisp for the masses. But don't
 think that Lisp is history; modern Lisps like Clojure are state-of-the-art
-programming languages. Lisp is the red pill.
+programming languages.
 
 Lisp is a *programmable programming language*. What does that mean? It means
-that you can change the syntax of Lisp (dynamically, even) to make it what you
-want. So for example if you are writing a text editor, you can turn Lisp into a
-language for writing text editors. Lisp achieves that by putting data and code
-at the same level: data can be used (evaluated, compiled) as code, and
-vice versa. Whereas C provides naive text-substitution macros and C++ provides
-brain-dead templates and template meta-programming weirdness, Lisp macros give
-you full access to the power of Lisp at compilation time: basically you ask the
-compiler "execute this code, and use the result as the code to be included in
-the program". You will never find yourself wishing the language supported some
-feature that would make your live easier; you can just add the feature yourself.
+that you can change Lisp (dynamically, even) to be what you want. So for
+example if you are writing a text editor, you can turn Lisp into a language for
+writing text editors. You will never find yourself wishing the language
+supported some feature that would make your life easier; you can just add the
+feature yourself.
+
+Lisp achieves that by putting data and code at the same level: data can be used
+(evaluated, compiled) as code, and vice versa. Whereas C provides naive
+text-substitution macros and C++ provides brain-dead templates and template
+meta-programming weirdness, Lisp macros give you full access to the power of
+Lisp at compilation time. Basically you can tell the compiler "execute this
+code, and use the result as the code to be included in the program".
 
 Developing in Lisp is easy: you can use a REPL (read-eval-print loop) to play
 with your code as you write it. The story of the
@@ -42,8 +45,8 @@ with your code as you write it. The story of the
 interesting anecdote about how useful a REPL can be: "Debugging a program
 running on a $100M piece of hardware that is 100 million miles away is an
 interesting experience". Lisp can also be very fast, close to C-level
-performance according to benchmarks. It has to be because it is so old (think
-about the kind of hardware they had in the sixties).
+performance according to some benchmarks. It had to be because it is so old
+(think about the kind of hardware they had in the sixties).
 
 ### Dialects
 
@@ -51,9 +54,9 @@ There has been countless dialects of Lisp in history. The ones that are
 relevant today are:
 
 * *Common Lisp*: the ANSI standard, which has many implementations such as SBCL
-  (Steel Bank Common Lisp, a high-performance native compiler). It includes one
-  the best object-oriented languages I've ever seen: CLOS (Common Lisp Object
-  System).
+  (Steel Bank Common Lisp, a high-performance native compiler). Common Lisp
+  includes one the best object-oriented languages I've ever seen: CLOS (Common
+  Lisp Object System).
 * *Scheme*: a Lisp with a minimalist design philosophy. It is the programming
   language used in the textbook
   [SICP](https://en.wikipedia.org/wiki/Structure_and_Interpretation_of_Computer_Programs). Guile
@@ -73,19 +76,21 @@ is not a good Lisp but it is enough to learn the basics.
 
 There are two ways to interact with ELisp:
 
-* `M-x ielm` (which stands for inferior emacs lisp mode) gives you a REPL
-  similar to say `irb` or `python`. Use `C-UP` and `C-DOWN` to repeat commands
-  you typed earlier.
+* `M-x ielm` (inferior emacs lisp mode) gives you a REPL similar to say `irb`
+  or `python`. Use `C-UP` and `C-DOWN` to repeat commands you typed
+  earlier. For example, try to evaluate `()` (nil).
 * You can use any ELisp buffer such as the scratch buffer. `C-j` evaluates the
   lisp expression before the cursor and inserts the result where the cursor
   is. `M-C-x` evaluate the current form and prints the result in the
   mini-buffer (also in messages). You can also use functions like `M-x
   evaluate-region`.
 
-Give it a try: head to the scratch buffer and type `"hello world"`. Then
-evaluate with `M-C-x`: the mini-buffer should display the string. This works
-because strings, like numbers, are objects that evaluate to themselves. If you
-want a real hello world, type this and evaluate with `M-C-x`[^fn-debugger]:
+Give it a try: open the scratch buffer and type `"hello world"`. Then evaluate
+with `M-C-x` (meta control x): the mini-buffer should display the string. This
+works because strings, like numbers, are objects that evaluate to themselves.
+
+If you want a real hello world, type this and evaluate with
+`M-C-x`[^fn-debugger]:
 
 {% highlight lisp %}
 (print "hello world")
@@ -99,8 +104,10 @@ calls; for example (1 + 2 + 3) * 5 is written in Lisp as `(* (+ 1 2 3) 5)`.
 The mini-buffer should display the string "hello world" twice: one is the
 printed text and the other is the returned value, which is also the printed
 text. Every function returns a value which is normally the last form that was
-evaluated. If you wanted the code above to return nil (which in ELisp means
-void, false, and the empty list) you could do this:
+evaluated.
+
+If you wanted the code above to return nil (which in ELisp and Common Lisp
+means void, false, and the empty list) you could do this:
 
 {% highlight lisp %}
 (progn
@@ -114,12 +121,12 @@ function `prog1` which does the same thing but returns the value of the first
 form. Run this code again with `M-C-x`: the mini-buffer should display the
 string that was printed and the return value nil.
 
-That's nice but our hello word should really be a function. So let's define
+That's nice but our hello world should really be a function. So let's define
 one:
 
 {% highlight lisp %}
 (defun hello-world ()
-  "Prints hello and returns nil"
+  "Prints hello world and returns nil"
   (print "hello world")
   nil)
 
@@ -127,26 +134,28 @@ one:
 (hello-world)
 {% endhighlight %}
 
-`defun` is followed by the name of the function, the list of arguments (the
+`defun` is followed by the name of the function, the list of arguments (an
 empty list here), an optional documentation string, and the forms. The body of
 a function is an implicit `progn`.
 
 ### Working with Lists
 
 The basic data structure in Lisp is a single-linked list. The syntax of a list
-is exactly the same as a sexp. For example let's declare a variable containing a
-list of integers:
+is exactly the same as a sexp. For example let's declare a variable `l`
+containing a list of integers:
 
 {% highlight lisp %}
 (defvar l '(1 2 3))
 {% endhighlight %}
 
 `defvar` is followed by a variable name and a value (and an optional
-documentation string). Note the quote character before the value: this is
+documentation string). Notice the quote character before the value: this is
 syntactic sugar for `(quote (1 2 3))` which means "don't evaluate this". The
 quote is needed because otherwise Lisp would try to call a function named "1"
-with parameters 2 and 3. If you wanted to use the result of a function call as
-value instead, you could use the `list` function:
+with parameters 2 and 3.
+
+If you wanted to use the result of a function call as value instead, you could
+use the `list` function, which creates a list containing its arguments:
 
 {% highlight lisp %}
 (defvar l (list 1 2 3))
@@ -156,16 +165,16 @@ Here we don't use the quote because we want the `list` form to be
 evaluated. There is no need to quote the numbers because a number evaluates to
 itself.
 
-`l` is a *symbol*, which is an object in memory with a unique name. Symbols
-have names, values, function definition and property lists. Our function
-`hello-world` above is also a symbol; it has no value but it has a function
-definition. The value of `l` is a list containing 3 cells or *cons* (for
-construct), each made of 2 pointers: a pointer to the value and a pointer to
-the next cell or nil.
+`l` is a *symbol*, which is an object in memory with a unique name. A Symbol
+has a name, and possibly a value, a function definition and a property
+list. Our function `hello-world` above is also a symbol; it has no value but it
+has a function definition. The value of `l` is a list containing 3 cells or
+*cons* (for construct), each made of 2 pointers: a pointer to the value and a
+pointer to the next cell or nil.
 
 ![list](/assets/list.png)
 
-Function `car` returns the value of the first pointer and `cdr` the value of
+Function `car` returns the value of the first pointer, and `cdr` the value of
 the second pointer (they are named like that for historical reasons[^fn-cons]):
 
 {% highlight lisp %}
@@ -189,9 +198,9 @@ reverse our list:
 
 That's it for today. Lots more to come. Stay tuned!
 
-[^fn-smalltalk]: And almost OOP. Alan Kay, who invented Smalltalk and coined Object Oriented Programming, said that Lisp is The greatest single programming language ever designed.
+[^fn-smalltalk]: And almost OOP. Alan Kay, who invented Smalltalk and coined Object Oriented Programming, said that "Lisp is the greatest single programming language ever designed".
 
-[^fn-dynamic-binding]: As opposed to lexical binding. If you define a local variable x in function foo and then call function bar, bar will see the value of x even if you don't pass it as parameter.
+[^fn-dynamic-binding]: As opposed to lexical binding. If you define a local variable x in function foo and then call function bar, bar will see the value of x even if you don't pass it as parameter. A long time ago people thought it was a good idea for performance reasons.
 
 [^fn-debugger]: If you make a mistake and end up in the debugger, just press q to exit.
 
