--- a/_posts/2015-07-03-lisp-part-1.md
+++ b/_posts/2015-07-03-lisp-part-1.md
@@ -11,7 +11,7 @@ the late fifties. John McCarthy, one of the founders of the discipline of
 Artificial Intelligence, created it.
 
 Lisp was very popular during the boom of AI; it even had its own
-[hardware](https://en.wikipedia.org/wiki/Lisp_machine) witch I had the
+[hardware](https://en.wikipedia.org/wiki/Lisp_machine) which I had the
 privilege to work with. Lisp has invented many, if not most, of the concepts
 and programming paradigms used in modern languages, including homoiconicity,
 first class functions, garbage collection, aspect-oriented programming, you
