--- a/_posts/2015-07-03-lisp-part-1.md
+++ b/_posts/2015-07-03-lisp-part-1.md
@@ -71,17 +71,15 @@ relevant today are:
 
 ### Getting started
 
-The simplest way to get started with Lisp is just to fire up Emacs. Yes, ELisp
-is not a good Lisp but it is enough to learn the basics.
-
-There are two ways to interact with ELisp:
+The simplest way to get a taste of Lisp is just to fire up Emacs. There are two
+ways to interact with ELisp:
 
 * `M-x ielm` (inferior emacs lisp mode) gives you a REPL similar to say `irb`
   or `python`. Use `C-UP` and `C-DOWN` to repeat commands you typed
   earlier. For example, try to evaluate `()` (nil).
 * You can use any ELisp buffer such as the scratch buffer. `C-j` evaluates the
   lisp expression before the cursor and inserts the result where the cursor
-  is. `M-C-x` evaluate the current form and prints the result in the
+  is. `M-C-x` evaluates the current form and prints the result in the
   mini-buffer (also in messages). You can also use functions like `M-x
   evaluate-region`.
 
@@ -89,8 +87,7 @@ Give it a try: open the scratch buffer and type `"hello world"`. Then evaluate
 with `M-C-x` (meta control x): the mini-buffer should display the string. This
 works because strings, like numbers, are objects that evaluate to themselves.
 
-If you want a real hello world, type this and evaluate with
-`M-C-x`[^fn-debugger]:
+If you want a real hello world, type this and evaluate again[^fn-debugger]:
 
 {% highlight lisp %}
 (print "hello world")
@@ -136,7 +133,7 @@ one:
 
 `defun` is followed by the name of the function, the list of arguments (an
 empty list here), an optional documentation string, and the forms. The body of
-a function is an implicit `progn`.
+a function is an implicit `progn`. Note that comments begin with a semicolon.
 
 ### Working with Lists
 
@@ -168,9 +165,13 @@ itself.
 `l` is a *symbol*, which is an object in memory with a unique name. A Symbol
 has a name, and possibly a value, a function definition and a property
 list. Our function `hello-world` above is also a symbol; it has no value but it
-has a function definition. The value of `l` is a list containing 3 cells or
-*cons* (for construct), each made of 2 pointers: a pointer to the value and a
-pointer to the next cell or nil.
+has a function definition. There is a special kind of symbol called *keyword*
+which has just a name and evaluates to itself; keywords start with a colon like
+`:foo` (they are like interned strings).
+
+The value of `l` is a list containing 3 cells or *cons* (for construct), each
+made of 2 pointers: a pointer to the value and a pointer to the next cell (or
+nil).
 
 ![list](/assets/list.png)
 
@@ -184,7 +185,24 @@ the second pointer (they are named like that for historical reasons[^fn-cons]):
 (cadr l)      ; => same as above, it's a shorcut
 (cddr l)      ; => (3)
 (caddr l)     ; => 3
-(cdddr l)     ; nil
+(cdddr l)     ; => nil e.g. ()
+{% endhighlight %}
+
+You can create a cons using the function that has the same name; its parameters
+are the car and the cdr.
+
+{% highlight lisp %}
+(defvar l2 (cons 0 l)) ; => (0 1 2 3)
+l                      ; => still (1 2 3)
+{% endhighlight %}
+
+The call to `cons` returns a new list starting with 0 and pointing to the first
+cons of `l`. You can verify that `l` and `l2` share the same tail with function
+`eq`, which returns `t` (true) if its arguments are the same Lisp object:
+
+{% highlight lisp %}
+(eq l l2)       ; => nil
+(eq l (cdr l2)) ; => t
 {% endhighlight %}
 
 Of course Lisp has plenty of functions to manipulate lists. Here is how to
@@ -194,8 +212,9 @@ reverse our list:
 (setq l (reverse l)) ; => (3 2 1)
 {% endhighlight %}
 
-`setq` sets a variable to a new value (set equal).
+`setq` sets a variable to a new value (set eq).
 
+-----
 That's it for today. Lots more to come. Stay tuned!
 
 [^fn-smalltalk]: And almost OOP. Alan Kay, who invented Smalltalk and coined Object Oriented Programming, said that "Lisp is the greatest single programming language ever designed".
@@ -204,4 +223,4 @@ That's it for today. Lots more to come. Stay tuned!
 
 [^fn-debugger]: If you make a mistake and end up in the debugger, just press q to exit.
 
-[^fn-cons]: CAR and CDR were the names of two registers in the CPU of the IBM 701!
+[^fn-cons]: CAR and CDR were the names of two registers in the CPU of the IBM 704!
