--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -347,7 +347,7 @@ each element of a list and returns a list of the results:
 
 ### Interactive functions
 
-Lets use our fresh knowledge to do something useful. Sometimes I want to
+Let's use our fresh knowledge to do something useful. Sometimes I want to
 include a separator in a comment, e.g. a sequence of dashes or tildas that
 fills up the rest of the line until the 80 character column (the `fill-column`
 variable defines that limit). For example, if I type "// Begin of test" I want
