debugging publish take 2

--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -7,3 +7,48 @@ date: 2015-07-10
 If you use Emacs but don't know Lisp, you are missing a lot. Emacs is
 infinitely customizable with Emacs Lisp (ELisp). This post is an introduction
 to ELisp, hopefully giving you enough basics to write useful functions.
+
+### Basic Types
+
+Strings are double quoted and can contain newlines. Use backslash to escape
+double quotes:
+
+{% highlight lisp %}
+"This is an \"Emacs verse\"
+Forgive it for being so terse"
+{% endhighlight %}
+
+The syntax for a character is `?x`: question mark followed by character. Some
+need to be escaped, like for example `?\(`, `?\)` and `?\\`. Here are many
+functions operating on strings, for example:
+
+{% highlight lisp %}
+(length "foo")              ; returns 3. It also works with lists.
+(concat "foo" "bar" "baz")  ; returns a new string "foobarbaz"
+(string= "foo" "foo")       ; string comparison
+(substring "foobar" 0 3)    ; returns "foo"
+(upcase "foo")              ; returns "FOO"
+{% endhighlight %}
+
+Integers have 29 bits of precision (I don't know why) and doubles have 64
+bits. Binary starts with "#b" and Hexadecimal with "#x".
+
+In Lisp an array is called a vector, and you can create one like so:
+`[ "the" "answer" "is" 42]`. Like lists, they can contain objects of various
+types. You use spaces to separate the values; comas are part of the Lisp syntax
+but they are used for something else as we will soon see.
+
+There are also sets and hash tables but they are not used often: most of the
+time a simple list is sufficient. Since lists are so important there is a
+special syntax just for them:
+
+{% highlight lisp %}
+'a               ; => a
+'(a b c)         ; => (a b c)
+`(1 ,(+ 1 1) 3)  ; => (1 2 3)
+{% endhighlight %}
+
+The quote prevents the evaluation of the symbol "a" on the first line, and the
+list on the second line, otherwise they would be considered as a variable and a
+function call respectively. The backquote is like a quote, except that any
+element preceded by a coma is evaluated.
