debugging publish take 4

--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -59,9 +59,9 @@ Lisp is a dynamically-typed language, like Ruby or Python and unlike Java or
 C++. You don't need to declare the type of a variable, and a variable can hold
 objects of different types over time.
 
-We [already saw]({% post_url 2015-07-03-lisp-part-1 %}) how to declare a global
-variable with `defvar` and set it with `setq`. Another way to use variables is
-function parameters:
+We already saw in the previous post how to declare a global variable with
+`defvar` and set it with `setq`. Another way to use variables is function
+parameters:
 
 {% highlight lisp %}
 (defun add (x y)
