debugging publish take 5

--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -153,4 +153,237 @@ The equivalent of a `let*` requires multiple function calls:
 
 The first lambda binds x to 1 and the second lambda binds y to x * 10.
 
+### Conditions
+
+In ELisp and Common Lisp, `nil` is used to mean false, and everything that is
+not nil is true, including the constant `t` which means true. Therefore a
+symbol is true, a string is true and a number is true (even 0). `nil` is the
+same as `()` and it is considered good taste to use the former when you mean
+false (or void) and the latter when you mean empty list. Note that Clojure and
+Scheme treat boolean logic differently: for them the empty list and false are
+different things.
+
+Let's start with simple boolean functions. `not` returns the negation of its
+argument, so that `(not t)` returns nil and vice versa. Like most functions in
+Lisp, `and` and `or` can take any number of arguments. `and` returns the value
+of the last argument that is true, or nil if it finds an argument that is not
+true. `or` returns the value of the first argument that is true or nil. For
+example:
+
+{% highlight lisp %}
+(and 0 'foo)      ; => 'foo => true
+(and 0 nil 'foo)  ; => nil  => false
+(or 0 nil 'foo)   ; => 0    => true
+{% endhighlight %}
+
+You can compare for equality using `=` for numbers, `string=` for strings or
+`eq` for same address in memory. There is also a generic `equal` function that
+tests if the objects are equal no matter what type they are, so that's the only
+one you need to remember.
+
+_(if then else*)_ is a special form that is equivalent to C's ternary operator
+`?:`. It must have at least a _then_ form and can only have one. It may have
+one or more _else_ forms. It returns the value of the _then_ form or the value
+of the last _else_ form. For example:
+
+{% highlight lisp %}
+(defun max (x y)
+  (if (> x y) x y))
+
+(max 1 2)  ; => 2
+{% endhighlight %}
+
+If you just want a _then_ or an _else_, it is better to use `when` and `unless`
+because they can have multiple _then_ or _else_ forms. They return the value of
+the last form or nil. Here is an example:
+
+{% highlight lisp %}
+;; current-time-string returns a string like "Fri Jul 10 10:52:44 2015"
+;; string-prefix-p is a predicate (-p) testing for string prefix
+(defun today-is-friday ()
+  (string-prefix-p "Fri" (current-time-string)))
+
+(when (today-is-friday)
+  (message "Yay Friday!")
+  (message "I love Fridays"))
+
+(unless (today-is-friday)
+  (message "It's not Friday")
+  (message "Oh well"))
+{% endhighlight %}
+
+Finally `cond` is like a super-charged version of C's switch/case: it chooses
+between an arbitrary number of alternatives. Its arguments are a collection of
+_clauses_, each of them being a list. The `car` of the clause is the condition,
+and the `cdr` is the body to be executed if the condition is true (the body can
+have as many forms as you like). `cond` executes the body of the first clause
+for which the condition is true. For example:
+
+{% highlight lisp %}
+(defun guess-what-type (x)
+  "Guesses the type of x"
+  (cond ((numberp x)
+         (message "x is a number"))
+        ((stringp x)
+         (message "x is a string")
+         (when (> (length x) 10)
+           (message "It has more than 10 characters")))
+        ((listp x)
+         (message "x is a list"))
+        ((symbolp x)
+         (message "x is a symbol"))
+        (t
+         (message "I don't now what x is"))))
+
+(guess-what-type 10)                ; x is a number
+(guess-what-type "hello")           ; x is string
+(guess-what-type '(a b))            ; x is a list
+(guess-what-type nil)               ; x is a list
+(guess-what-type 'foo)              ; x is a symbol
+(guess-what-type :foo)              ; x is a symbol
+(guess-what-type (current-buffer))  ; I don't know what x is
+{% endhighlight %}
+
+The code above uses predicates like `numberp` which returns `t` if the argument
+is a number. The function `current-buffer` returns a buffer object which is
+neither a number, string, list or symbol (it is an instance of a class). Notice
+the last clause: the condition is `t` which is obviously always true. This is
+the "otherwise" clause guaranteed to fire if everything else above has failed.
+
+### Loops
+
+The simplest loop is a `while`:
+
+{% highlight lisp %}
+(let ((i 10))
+  (while (> i 0)
+    (message "%d" i)
+    (decf i)))  ; decrements i. <=> (setq i (- i i))
+{% endhighlight %}
+
+`dotimes` takes a variable and a count, and sets the variable from 0 to count -
+1:
+
+{% highlight lisp %}
+(dotimes (i 5) (message "%d" i))
+{% endhighlight %}
+
+`dolist` takes a variable and a list, and sets the variable to each item in the
+list:
+
+{% highlight lisp %}
+(dolist (i '(a b c)) (message "%s" i))
+{% endhighlight %}
+
+If you need anything more complicated, take a look at the documentation of the
+`loop` macro. This is a very powerful macro with lot of options that takes an
+(almost) English sentence as argument and generates what you mean. For example,
+the following code iterates over a "plist" (property list) which is a
+collection like _(key1 value1 key2 value2)_ using `cddr` to move by 2 items at
+a time and skipping the properties where the key is an even number:
+
+{% highlight lisp %}
+(let ((l '(1 "one" 2 "two" 3 "three")))
+  (loop for (key value) on l by #'cddr
+        unless (evenp key)
+        do (message "%d is %s in English" key value)))
+;; 1 is one in English
+;; 3 is three in English
+{% endhighlight %}
+
+Elisp also has exceptions, try/catch/finally etc.
+
+### Functions
+
+Lisp uses several keywords for declaring arguments within a `defun`.
+
+* `&optional` introduces optional arguments, which if not specified are bound
+  to nil. For example `(defun foo (a b &optional c d) ...)` makes c and d
+  optional.
+* `&rest` takes all remaining arguments and concatenates them into a list. For
+  example the arguments of the `list` functions are defined as `(&rest
+  objects)`.
+* `&key` introduces a keyword argument, that is an optional argument specified
+  by a keyword with a default value of your choice. For example:
+
+{% highlight lisp %}
+(defun foo (&key (x 0) (y 0))
+  (list x y))
+
+(foo)            ; => (0 0)
+(foo :x 1)       ; => (1 0)
+(foo :y 2)       ; => (0 2)
+(foo :x 1 :y 2)  ; => (1 2)
+{% endhighlight %}
+
+Functions are first class objects in Lisp. You can store them in a variable and
+call them later. For example:
+
+{% highlight lisp %}
+(setq f #'list)       ; shortcut for (function list).
+(funcall f 'a 'b 'c)  ; => (a b c)
+{% endhighlight %}
+
+The syntax `#'foo` is sugar for `(function foo)` which returns the definition
+of the function stored in symbol foo. It basically returns a pointer to the
+code. `funcall` calls the function with a given list of arguments. Note that
+Emacs is very tolerant and `(setq f 'list)` (e.g. setting f to the symbol
+"list") will also work.
+
+`apply` works like `funcall` but it applies the function to a list of
+arguments:
+
+{% highlight lisp %}
+(apply #'+ '(1 2 3))  ; => 6
+{% endhighlight %}
+
+An interesting example of using `apply` is `mapcar` which applies a function to
+each element of a list and returns a list of the results:
+
+{% highlight lisp %}
+(mapcar #'(lambda (x) (* 10 x))
+        '(1 2 3))  ; => (10 20 30)
+{% endhighlight %}
+
+### Interactive functions
+
+Lets use our fresh knowledge to do something useful. Sometimes I want to
+include a separator in a comment, e.g. a sequence of dashes or tildas that
+fills up the rest of the line until the 80 character column (the `fill-column`
+variable defines that limit). For example, if I type "// Begin of test" I want
+a magic key to do this:
+
+{% highlight lisp %}
+// Begin of test~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+{% endhighlight %}
+
+Elisp functions must be declared "iteractive" if you want to call then using
+Meta-x or bind them to a key. You do this declaration by calling the
+interactive special form (it's not a function) as the first form in the body of
+your function.
+
+{% highlight lisp %}
+(defun insert-separator ()
+  "Inserts a sequence of ~ at the end of the line, up to the
+fill column"
+  (interactive)
+  (end-of-line)
+  (let ((num-chars (- fill-column (current-column))))
+    (dotimes (i num-chars)
+      (insert ?~))))
+
+;; Bind this function to C-c ~
+(global-set-key [(control c)(~)] #'insert-separator)
+{% endhighlight %}
+
+`end-of-line` move the cursor to the end of the line, as you probably
+guessed. The let form calculates the number of characters to insert before it
+reaches the end of the line using the variable `fill-column` (which should be
+set to 79) and the `current-column` function which returns the cursor's column
+number. The `insert` function inserts a character or string at the position of
+the cursor. Finally `global-set-key` binds the function to a key chord.
+
+-----
+That's it for today. Lots more to come. Stay tuned!
+
 [^fn-minibuffer]: A right click in the mini-buffer pops up the message buffer. That's a nice trick for debugging if you have a lot of traces.
