--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -4,9 +4,19 @@ title: "ELisp crash course"
 date: 2015-07-10
 ---
 
+This is the second article in a series about Lisp (it assumes you read the
+first one).
+
 If you use Emacs but don't know Lisp, you are missing a lot. Emacs is
 infinitely customizable with Emacs Lisp (ELisp). This post is an introduction
-to ELisp, hopefully giving you enough basics to write useful functions.
+to ELisp, hopefully giving you enough basics to write useful functions. Today
+we will mostly focus on the language itself, as opposed to the gazillion of
+Emacs-specific APIs for editing text.
+
+If you find yourself looking for a function or variable, you can browse the
+[Emacs elisp site](http://www.gnu.org/software/emacs/manual/html_node/elisp/)
+or you can use `M-x apropos` which displays everything that matches a given
+string.
 
 ### Basic Types
 
@@ -19,8 +29,9 @@ Forgive it for being so terse"
 {% endhighlight %}
 
 The syntax for a character is `?x`: question mark followed by character. Some
-need to be escaped, like for example `?\(`, `?\)` and `?\\`. Here are many
-functions operating on strings, for example:
+need to be escaped, like for example `?\(`, `?\)` and `?\\`.
+
+There are many functions operating on strings, like for example:
 
 {% highlight lisp %}
 (length "foo")              ; returns 3. It also works with lists.
@@ -30,15 +41,19 @@ functions operating on strings, for example:
 (upcase "foo")              ; returns "FOO"
 {% endhighlight %}
 
+Note that none of these functions have any side effect, as it is the case with
+most functions in Lisp (they are pure functions). They create a new object and
+return it.
+
 Integers have 29 bits of precision (I don't know why) and doubles have 64
-bits. Binary starts with "#b" and Hexadecimal with "#x".
+bits. Binary starts with "#b", octal with "#o" and Hexadecimal with "#x".
 
 In Lisp an array is called a vector, and you can create one like so:
 `[ "the" "answer" "is" 42]`. Like lists, they can contain objects of various
 types. You use spaces to separate the values; comas are part of the Lisp syntax
 but they are used for something else as we will soon see.
 
-There are also sets and hash tables but they are not used often: most of the
+Lisp has also sets and hash tables but they are not used often: most of the
 time a simple list is sufficient. Since lists are so important there is a
 special syntax just for them:
 
@@ -51,7 +66,8 @@ special syntax just for them:
 The quote prevents the evaluation of the symbol "a" on the first line, and the
 list on the second line, otherwise they would be considered as a variable and a
 function call respectively. The backquote is like a quote, except that any
-element preceded by a coma is evaluated.
+element preceded by a coma is evaluated. The backquote is very handy for
+defining macros, e.g. functions that generate code.
 
 ### Variables
 
@@ -278,9 +294,17 @@ list:
 If you need anything more complicated, take a look at the documentation of the
 `loop` macro. This is a very powerful macro with lot of options that takes an
 (almost) English sentence as argument and generates what you mean. For example,
-the following code iterates over a "plist" (property list) which is a
-collection like _(key1 value1 key2 value2)_ using `cddr` to move by 2 items at
-a time and skipping the properties where the key is an even number:
+a C "for" loop can be expressed like so:
+
+{% highlight lisp %}
+(loop for i from 1 to 10
+      do (message "i = %d" i))
+{% endhighlight %}
+
+Another example is the following code which iterates over a "plist" (property
+list) which is a collection like _(key1 value1 key2 value2)_ using `cddr` to
+move by 2 items at a time and skipping the properties where the key is an even
+number:
 
 {% highlight lisp %}
 (let ((l '(1 "one" 2 "two" 3 "three")))
@@ -291,7 +315,7 @@ a time and skipping the properties where the key is an even number:
 ;; 3 is three in English
 {% endhighlight %}
 
-Elisp also has exceptions, try/catch/finally etc.
+Elisp also has exceptions, try/catch/finally and anything else you would expect.
 
 ### Functions
 
@@ -381,7 +405,9 @@ guessed. The let form calculates the number of characters to insert before it
 reaches the end of the line using the variable `fill-column` (which should be
 set to 79) and the `current-column` function which returns the cursor's column
 number. The `insert` function inserts a character or string at the position of
-the cursor. Finally `global-set-key` binds the function to a key chord.
+the cursor. Finally `global-set-key` binds the function to a key chord. Note
+that this is a simple implementation; it might be more efficient to create a
+string with n characters using `(make-string num-chars ?~)`.
 
 -----
 That's it for today. Lots more to come. Stay tuned!
